--- a/index.html
+++ b/index.html
@@ -38,25 +38,27 @@
     </style>
 </head>
 <body>
-    <div class="product">
-        <a href="https://example.com/product1" target="_blank">
-            <img src="https://via.placeholder.com/200" alt="Product 1">
-        </a>
-        <p>Product 1</p>
-    </div>
+    <div id="product-container"></div>
 
-    <div class="product">
-        <a href="https://example.com/product2" target="_blank">
-            <img src="https://via.placeholder.com/200" alt="Product 2">
-        </a>
-        <p>Product 2</p>
-    </div>
+    <script>
+        const products = [
+            { name: "Product 1", image: "https://via.placeholder.com/200", link: "https://example.com/product1" },
+            { name: "Product 2", image: "https://via.placeholder.com/200", link: "https://example.com/product2" },
+            { name: "Product 3", image: "https://via.placeholder.com/200", link: "https://example.com/product3" }
+        ];
 
-    <div class="product">
-        <a href="https://example.com/product3" target="_blank">
-            <img src="https://via.placeholder.com/200" alt="Product 3">
-        </a>
-        <p>Product 3</p>
-    </div>
+        const container = document.getElementById("product-container");
+        products.forEach(product => {
+            const productDiv = document.createElement("div");
+            productDiv.className = "product";
+            productDiv.innerHTML = `
+                <a href="${product.link}" target="_blank">
+                    <img src="${product.image}" alt="${product.name}">
+                </a>
+                <p>${product.name}</p>
+            `;
+            container.appendChild(productDiv);
+        });
+    </script>
 </body>
 </html>
