--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <script>
         const products = [
-            { name: "Product 1", image: "https://via.placeholder.com/200", link: "https://example.com/product1" },
+            { name: "Nubwo NK51 Wireless Mechanical Keyboard", image: "https://via.placeholder.com/200", link: "https://s.shopee.co.th/AKO1DJCSXo" },
             { name: "Product 2", image: "https://via.placeholder.com/200", link: "https://example.com/product2" },
             { name: "Product 3", image: "https://via.placeholder.com/200", link: "https://example.com/product3" }
         ];
