--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <script>
         const products = [
-            { name: "Nubwo NK51 Wireless Mechanical Keyboard", image: "https://via.placeholder.com/200", link: "https://s.shopee.co.th/AKO1DJCSXo" },
+            { name: "Nubwo NK51 Wireless Mechanical Keyboard", image: "https://down-th.img.susercontent.com/file/th-11134207-7r992-lzubz6v9mze1d7.webp", link: "https://s.shopee.co.th/AKO1DJCSXo" },
             { name: "Product 2", image: "https://via.placeholder.com/200", link: "https://example.com/product2" },
             { name: "Product 3", image: "https://via.placeholder.com/200", link: "https://example.com/product3" }
         ];
