--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Product Link Page">
+    <meta name="description" content="Simple Product Link Page">
     <title>Product Links</title>
     <style>
         body {
@@ -15,13 +15,53 @@
             justify-content: center;
             background-color: #f4f4f9;
         }
-        .product {
-            margin: 10px;
+        .owner-info {
+            width: 100%;
+            text-align: center;
+            padding: 20px 0;
+            background-color: #ffffff;
+            border-bottom: 1px solid #ddd;
+        }
+        .owner-info img {
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+        }
+        .owner-info h2, .owner-info p {
+            margin: 5px 0;
+        }
+        .contact-links {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 10px;
+        }
+        .contact-links a {
+            text-decoration: none;
+            color: #007bff;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
+            gap: 5px;
+        }
+        .contact-links img {
+            width: 24px;
+            height: 24px;
+        }
+        .search-bar {
+            width: 100%;
+            padding: 10px;
             text-align: center;
         }
+        .search-bar input {
+            width: 50%;
+            padding: 8px;
+            border-radius: 5px;
+            border: 1px solid #ddd;
+        }
         .product img {
-            width: 200px;
-            height: 200px;
+            width: 150px;
+            height: 150px;
             object-fit: cover;
             border-radius: 10px;
             transition: transform 0.2s;
@@ -29,16 +69,27 @@
         .product img:hover {
             transform: scale(1.05);
         }
-        @media (max-width: 768px) {
-            .product img {
-                width: 150px;
-                height: 150px;
-            }
-        }
     </style>
 </head>
 <body>
+    <div class="owner-info">
+        <img src="https://via.placeholder.com/100" alt="Owner">
+        <h2>Nutnarinthon Boonma</h2>
+        <p>ติดต่อคลิกข้างล่าง ซื้อสินค้ากดที่รูปได้เลย</p>
+        <div class="contact-links">
+            <a href="https://www.facebook.com/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"></a>
+            <a href="https://line.me/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg"></a>
+            <a href="mailto:nutnarinthon645@gmail.com"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png"></a>
+        </div>
+    </div>
+
+    <div class="search-bar">
+        <input type="text" id="search" placeholder="Search products..." oninput="filterProducts()">
+    </div>
+
     <div id="product-container"></div>
+    <p id="no-results" class="no-results" style="display: none;">ไม่พบสินค้า</p>
 
     <script>
         const products = [
@@ -48,17 +99,36 @@
         ];
 
         const container = document.getElementById("product-container");
-        products.forEach(product => {
-            const productDiv = document.createElement("div");
-            productDiv.className = "product";
-            productDiv.innerHTML = `
-                <a href="${product.link}" target="_blank">
-                    <img src="${product.image}" alt="${product.name}">
-                </a>
-                <p>${product.name}</p>
-            `;
-            container.appendChild(productDiv);
-        });
+        const noResults = document.getElementById("no-results");
+
+        function displayProducts(filteredProducts) {
+            container.innerHTML = "";
+            if (filteredProducts.length === 0) {
+                noResults.style.display = "block";
+                displayProducts(products);
+            } else {
+                noResults.style.display = "none";
+                filteredProducts.forEach(product => {
+                    const productDiv = document.createElement("div");
+                    productDiv.className = "product";
+                    productDiv.innerHTML = `
+                        <a href="${product.link}" target="_blank">
+                            <img src="${product.image}" alt="${product.name}">
+                        </a>
+                        <p>${product.name}</p>
+                    `;
+                    container.appendChild(productDiv);
+                });
+            }
+        }
+
+        function filterProducts() {
+            const searchTerm = document.getElementById("search").value.toLowerCase().trim();
+            const filtered = products.filter(product => product.name.toLowerCase().includes(searchTerm));
+            displayProducts(filtered);
+        }
+
+        displayProducts(products);
     </script>
 </body>
 </html>
