--- a/index.html
+++ b/index.html
@@ -6,183 +6,153 @@
     <meta name="description" content="Simple Product Link Page">
     <title>Product Links</title>
     <style>
-        /* สไตล์พื้นฐานของ body */
+        /* Base styling for body */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            flex-direction: column;
+            align-items: center;
             background-color: #f4f4f9;
+            overflow-x: hidden;
         }
 
-        /* สไตล์สำหรับส่วนข้อมูลเจ้าของเว็บไซต์ */
+        /* Owner information section */
         .owner-info {
             width: 100%;
+            max-width: 800px;
             text-align: center;
             padding: 20px 0;
             background-color: #ffffff;
             border-bottom: 1px solid #ddd;
         }
 
-        /* สไตล์สำหรับภาพเจ้าของ */
         .owner-info img {
             width: 100px;
             height: 100px;
             border-radius: 50%;
         }
 
-        /* สไตล์สำหรับชื่อและคำอธิบายเจ้าของ */
-        .owner-info h2, .owner-info p {
-            margin: 5px 0;
-        }
-
-        /* สไตล์สำหรับการแสดงลิงก์ติดต่อ */
+        /* Contact links with flex layout */
         .contact-links {
             display: flex;
             justify-content: center;
-            gap: 20px;
+            flex-wrap: wrap;
+            gap: 15px;
             margin-top: 10px;
         }
 
-        /* สไตล์สำหรับลิงก์ในส่วนข้อมูลติดต่อ */
-        .contact-links a {
-            text-decoration: none;
-            color: #007bff;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-            gap: 5px;
-        }
-
-        /* ขนาดของโลโก้แอปต่างๆ */
         .contact-links img {
             width: 24px;
             height: 24px;
         }
 
-        /* สไตล์ช่องค้นหา */
+        /* Search bar styling */
         .search-bar {
             width: 100%;
+            max-width: 800px;
             padding: 10px;
             text-align: center;
         }
 
-        /* สไตล์สำหรับช่อง input */
         .search-bar input {
-            width: 50%;
+            width: 90%;
+            max-width: 400px;
             padding: 8px;
             border-radius: 5px;
             border: 1px solid #ddd;
         }
 
-        /* สไตล์สำหรับการแสดงรูปสินค้า */
+        /* Product display styling */
+        .product {
+            margin: 10px;
+            text-align: center;
+        }
+
         .product img {
-            width: 400px;
-            height: 400px;
+            width: 120px;
+            height: 120px;
             object-fit: cover;
             border-radius: 10px;
             transition: transform 0.2s;
         }
 
-        /* เอฟเฟ็กต์เมื่อเอาเมาส์ไปชี้ที่รูปสินค้า */
         .product img:hover {
             transform: scale(1.05);
         }
 
-        /* สไตล์สำหรับข้อความ "ไม่พบสินค้า" */
+        /* Message when no products found */
         .no-results {
             text-align: center;
             font-size: 18px;
             color: red;
-            display: none; /* ซ่อนข้อความโดยเริ่มต้น */
+            display: none;
+        }
+
+        /* Responsive adjustment for wider screens */
+        @media (min-width: 768px) {
+            .contact-links {
+                flex-wrap: nowrap;
+            }
         }
     </style>
 </head>
 <body>
-    <!-- ข้อมูลเจ้าของเว็บไซต์ -->
+    <!-- Owner Information Section -->
     <div class="owner-info">
-        <img src="https://via.placeholder.com/100" alt="Owner"> <!-- รูปเจ้าของ -->
-        <h2>Nutnarinthon Boonma</h2> <!-- ชื่อเจ้าของ -->
-        <p>ติดต่อคลิกข้างล่าง ซื้อสินค้ากดที่รูปได้เลย</p> <!-- คำอธิบาย -->
+        <img src="https://via.placeholder.com/100" alt="Owner">
+        <h2>Nutnarinthon Boonma</h2>
+        <p>ติดต่อคลิกข้างล่าง ซื้อสินค้ากดที่รูปได้เลย</p>
         <div class="contact-links">
-            <!-- ลิงก์ไปยัง Facebook -->
-            <a href="https://www.facebook.com/" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg">
-            </a>
-            <!-- ลิงก์ไปยัง Instagram -->
-            <a href="https://www.instagram.com/" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png">
-            </a>
-            <!-- ลิงก์ไปยัง Line -->
-            <a href="https://line.me/" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg">
-            </a>
-            <!-- ลิงก์ไปยัง Gmail -->
-            <a href="mailto:nutnarinthon645@gmail.com">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png">
-            </a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"></a>
+            <a href="https://line.me/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg"></a>
+            <a href="mailto:nutnarinthon645@gmail.com"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png"></a>
         </div>
     </div>
 
-    <!-- ช่องค้นหาสินค้า -->
+    <!-- Search Bar -->
     <div class="search-bar">
-        <input type="text" id="search" placeholder="Search products..." oninput="filterProducts()"> <!-- input สำหรับค้นหา -->
+        <input type="text" id="search" placeholder="Search products..." oninput="filterProducts()">
     </div>
 
-    <!-- แสดงสินค้าทั้งหมด -->
+    <!-- Product Display Area -->
     <div id="product-container"></div>
-
-    <!-- ข้อความเมื่อไม่พบสินค้า -->
     <p id="no-results" class="no-results">ไม่พบสินค้า</p>
 
     <script>
-        // ข้อมูลสินค้า
+        // Product data
         const products = [
             { name: "Nubwo NK51 Wireless Mechanical Keyboard", image: "https://down-th.img.susercontent.com/file/th-11134207-7r992-lzubz6v9mze1d7.webp", link: "https://s.shopee.co.th/AKO1DJCSXo" },
             { name: "Product 2", image: "https://via.placeholder.com/200", link: "https://example.com/product2" },
             { name: "Product 3", image: "https://via.placeholder.com/200", link: "https://example.com/product3" }
         ];
 
-        const container = document.getElementById("product-container"); // ตัวแปรที่เก็บ element ที่จะใส่สินค้าลงไป
-        const noResults = document.getElementById("no-results"); // ตัวแปรที่เก็บข้อความ "ไม่พบสินค้า"
+        const container = document.getElementById("product-container");
+        const noResults = document.getElementById("no-results");
 
-        // ฟังก์ชันแสดงสินค้าที่กรองมา
+        // Display filtered products
         function displayProducts(filteredProducts) {
-            container.innerHTML = ""; // เคลียร์สินค้าก่อนหน้า
-
+            container.innerHTML = "";
             filteredProducts.forEach(product => {
-                const productDiv = document.createElement("div"); // สร้าง div สำหรับสินค้า
-                productDiv.className = "product"; // เพิ่มคลาสให้กับ div
-
-                productDiv.innerHTML = `
-                    <a href="${product.link}" target="_blank">
-                        <img src="${product.image}" alt="${product.name}">
-                    </a>
-                    <p>${product.name}</p>
-                `; // เพิ่ม HTML สำหรับสินค้า
-
-                container.appendChild(productDiv); // เพิ่ม div ของสินค้าไปยัง container
+                const productDiv = document.createElement("div");
+                productDiv.className = "product";
+                productDiv.innerHTML = `<a href="${product.link}" target="_blank"><img src="${product.image}" alt="${product.name}"></a><p>${product.name}</p>`;
+                container.appendChild(productDiv);
             });
         }
 
-        // ฟังก์ชันค้นหาสินค้า
+        // Filter products based on search term
         function filterProducts() {
-            const searchTerm = document.getElementById("search").value.toLowerCase().trim(); // คำค้นหาจากช่อง input
-            const filtered = products.filter(product => product.name.toLowerCase().includes(searchTerm)); // กรองสินค้าที่ชื่อสินค้าตรงกับคำค้นหา
+            const searchTerm = document.getElementById("search").value.toLowerCase().trim();
+            const filtered = products.filter(product => product.name.toLowerCase().includes(searchTerm));
 
-            // หากไม่พบสินค้า
-            if (filtered.length === 0) {
-                noResults.style.display = "block"; // แสดงข้อความ "ไม่พบสินค้า"
-            } else {
-                noResults.style.display = "none"; // ซ่อนข้อความ "ไม่พบสินค้า"
-            }
-
-            displayProducts(filtered); // แสดงสินค้าที่กรองมา
+            noResults.style.display = filtered.length === 0 ? "block" : "none";
+            displayProducts(filtered);
         }
 
-        // แสดงสินค้าทั้งหมดเมื่อโหลดหน้าเว็บ
+        // Initial display of all products
         displayProducts(products);
     </script>
 </body>
