--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 <body>
     <!-- Owner Information Section -->
     <div class="owner-info">
-        <img src="https://via.placeholder.com/100" alt="Owner">
+        <img src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/bc37bb79b0361913165a583742e6ff63~tplv-tiktokx-cropcenter:720:720.jpeg?dr=14579&refresh_token=3c38ec4c&x-expires=1747386000&x-signature=v0FIV%2BnxFX9P6DRZ5NX5UbYPU70%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=my" alt="Owner">
         <h2>Nutnarinthon Boonma</h2>
         <p>ติดต่อคลิกข้างล่าง ซื้อสินค้ากดที่รูปได้เลย</p>
         <div class="contact-links">
