--- a/index.html
+++ b/index.html
@@ -125,8 +125,16 @@
         // Product data
         const products = [
             { name: "Nubwo NK51 Wireless Mechanical Keyboard", image: "https://down-th.img.susercontent.com/file/th-11134207-7r992-lzubz6v9mze1d7.webp", link: "https://s.shopee.co.th/AKO1DJCSXo" },
-            { name: "Product 2", image: "https://via.placeholder.com/200", link: "https://example.com/product2" },
-            { name: "Product 3", image: "https://via.placeholder.com/200", link: "https://example.com/product3" }
+            { name: "VESA monitor stand ขาตั้งจอคอม 2 จอ ขนาด 17-40 นิ้ว ", image: "https://down-th.img.susercontent.com/file/cn-11134207-7r98o-ltp8ojsykdel01.webp", link: "https://s.shopee.co.th/gDVqj3WT2" },
+            { name: "UGREEN อะแดปเตอร์รับส่งสัญญาณ USB บลูทูธ 5.0 5.3 EDR Dongle สําหรับ PC", image: "https://down-th.img.susercontent.com/file/sg-11134201-22100-y03b8djw83ivd4.webp", link: "https://s.shopee.co.th/8006aAYDgI" },
+            { name: "Neolution E-Sport Gaming Headset Nebula Wireless หูฟังเกมมิ่งไร้สาย 7.1 channel Tri-mode ไฟ RGB", image: "https://down-th.img.susercontent.com/file/th-11134207-7rasd-m6kfxfe20vn310.webp", link: "https://s.shopee.co.th/6fUizs03gA" },
+            { name: "รางเก็บสายไฟใต้โต๊ะ ไม่ต้องเจาะรู ทนทาน ขนาด 43-74 cm ", image: "https://down-th.img.susercontent.com/file/th-11134207-7rasl-m76ednixgwj9d0.webp", link: "https://s.shopee.co.th/5KzLOgbX9O" },
+            { name: "USB Cable Winder Tidy ซิลิโคนจัดระเบียบสายไฟ", image: "https://down-th.img.susercontent.com/file/cn-11134207-7r98o-lyc0dg0h2wkzaa.webp", link: "https://s.shopee.co.th/6VBInhJwPN" },
+            { name: "ตีนตุ๊กแก สำหรับจัดระเบียบสายไฟ", image: "https://down-th.img.susercontent.com/file/sg-11134202-7rd4d-lwmrkh2zdkg2fb.webp", link: "https://s.shopee.co.th/4q34obI1GX" },
+            { name: "สติกเกอร์วอลเปเปอร์ สีดํา กันน้ำ มีกาวในตัว สําหรับติดตกแต่งเฟอร์นิเจอร์", image: "https://down-th.img.susercontent.com/file/ph-11134201-7qul6-ljibrop7tzf35c.webp", link: "https://s.shopee.co.th/6VBInbQQ9D" },
+            { name: "ชุดประแจ 14PCS เบอร์ 8-24 mm", image: "https://down-th.img.susercontent.com/file/sg-11134201-7rbkh-lnb5y2npz0t63e.webp", link: "https://s.shopee.co.th/2B2JdfNPWk" }
+            
+            //{ name: "Product 3", image: "https://via.placeholder.com/200", link: "https://example.com/product3" }
         ];
 
         const container = document.getElementById("product-container");
