--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
         <h2>Nutnarinthon Boonma</h2>
         <p>ติดต่อคลิกข้างล่าง ซื้อสินค้ากดที่รูปได้เลย</p>
         <div class="contact-links">
-            <a href="https://www.facebook.com/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"></a>
-            <a href="https://line.me/" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg"></a>
+            <a href="https://www.facebook.com/lostzg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"></a>
+            <a href="https://www.instagram.com/nutnarinthon?igsh=MTJvb2pkeGpoNWo0OQ%3D%3D&utm_source=qr" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"></a>
+            <a href="https://line.me/ti/p/Hw719EMjFu" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg"></a>
             <a href="mailto:nutnarinthon645@gmail.com"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png"></a>
         </div>
     </div>
