--- a/index.html
+++ b/index.html
@@ -65,22 +65,34 @@
         }
 
         /* Product display styling */
-        .product {
-            margin: 10px;
-            text-align: center;
-        }
+        .product-grid {
+        	display: grid;
+            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+            gap: 20px;
+            margin: 20px;
+            max-width: 800px;
 
-        .product img {
-            width: 120px;
-            height: 120px;
-            object-fit: cover;
+        }
+		.product-card {
+            background-color: #ffffff;
+            padding: 15px;
             border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            text-align: center;
             transition: transform 0.2s;
         }
-
-        .product img:hover {
-            transform: scale(1.05);
+        
+        .product-card:hover {
+            transform: scale(1.03);
         }
+        
+        .product-card img {
+            width: 100%;
+            height: 150px;
+            object-fit: cover;
+            border-radius: 8px;
+        }
+
 
         /* Message when no products found */
         .no-results {
@@ -118,7 +130,7 @@
     </div>
 
     <!-- Product Display Area -->
-    <div id="product-container"></div>
+    <div id="product-container" class="product-grid"></div>
     <p id="no-results" class="no-results">ไม่พบสินค้า</p>
 
     <script>
@@ -145,7 +157,7 @@
             container.innerHTML = "";
             filteredProducts.forEach(product => {
                 const productDiv = document.createElement("div");
-                productDiv.className = "product";
+                productDiv.className = "product-card";
                 productDiv.innerHTML = `<a href="${product.link}" target="_blank"><img src="${product.image}" alt="${product.name}"></a><p>${product.name}</p>`;
                 container.appendChild(productDiv);
             });
