--- a/index.html
+++ b/index.html
@@ -65,34 +65,22 @@
         }
 
         /* Product display styling */
-        .product-grid {
-        	display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-            gap: 20px;
-            margin: 20px;
-            max-width: 800px;
-
-        }
-		.product-card {
-            background-color: #ffffff;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        .product {
+            margin: 10px;
             text-align: center;
+        }
+
+        .product img {
+            width: 120px;
+            height: 120px;
+            object-fit: cover;
+            border-radius: 10px;
             transition: transform 0.2s;
         }
-        
-        .product-card:hover {
-            transform: scale(1.03);
-        }
-        
-        .product-card img {
-            width: 100%;
-            height: 150px;
-            object-fit: cover;
-            border-radius: 8px;
-        }
 
+        .product img:hover {
+            transform: scale(1.05);
+        }
 
         /* Message when no products found */
         .no-results {
@@ -130,7 +118,7 @@
     </div>
 
     <!-- Product Display Area -->
-    <div id="product-container" class="product-grid"></div>
+    <div id="product-container"></div>
     <p id="no-results" class="no-results">ไม่พบสินค้า</p>
 
     <script>
@@ -157,7 +145,7 @@
             container.innerHTML = "";
             filteredProducts.forEach(product => {
                 const productDiv = document.createElement("div");
-                productDiv.className = "product-card";
+                productDiv.className = "product";
                 productDiv.innerHTML = `<a href="${product.link}" target="_blank"><img src="${product.image}" alt="${product.name}"></a><p>${product.name}</p>`;
                 container.appendChild(productDiv);
             });
