--- a/index.html
+++ b/index.html
@@ -254,19 +254,16 @@
     <!-- เพิ่มความห่างข้างบน footer -->
     <div style="height: 20px;"></div>
     <!-- Footer Information Section display same owner information -->
-    <div class="owner-info footer-horizontal">
-        <img class="footer-profile-img" src="https://p16-sign-va.tiktokcdn.com/tos-maliva-avt-0068/bc37bb79b0361913165a583742e6ff63~tplv-tiktokx-cropcenter:720:720.jpeg?dr=14579&refresh_token=3c38ec4c&x-expires=1747386000&x-signature=v0FIV%2BnxFX9P6DRZ5NX5UbYPU70%3D&t=4d5b0474&ps=13740610&shp=a5d48078&shcp=81f88b70&idc=my" alt="Owner">
-        <div class="footer-info-content-row">
-            <div class="footer-info-text">
-                <!-- <p>Nutnarinthon Boonma</p> -->
-                <p>ฝากติดตามละเป็นกำลังใจให้ด้วยนะครับ</p>
-            </div>
-            <div class="contact-links contact-links-footer">
-                <a href="https://www.facebook.com/lostzg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"></a>
-                <a href="https://www.instagram.com/nutnarinthon?igsh=MTJvb2pkeGpoNWo0OQ%3D%3D&utm_source=qr" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"></a>
-                <a href="https://line.me/ti/p/Hw719EMjFu" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg"></a>
-                <a href="mailto:nutnarinthon645@gmail.com"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png"></a>
-            </div>
+    <div class="owner-info footer-horizontal" style="flex-direction: column; gap: 8px;">
+        <div class="footer-info-text">
+            <!-- <p>Nutnarinthon Boonma</p> -->
+            <p>ฝากติดตามละเป็นกำลังใจให้ด้วยนะครับ</p>
+        </div>
+        <div class="contact-links contact-links-footer">
+            <a href="https://www.facebook.com/lostzg" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"></a>
+            <a href="https://www.instagram.com/nutnarinthon?igsh=MTJvb2pkeGpoNWo0OQ%3D%3D&utm_source=qr" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"></a>
+            <a href="https://line.me/ti/p/Hw719EMjFu" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/4/41/LINE_logo.svg"></a>
+            <a href="mailto:nutnarinthon645@gmail.com"><img src="https://upload.wikimedia.org/wikipedia/commons/4/4e/Gmail_Icon.png"></a>
         </div>
     </div>
 </body>
